changes to hero message

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <section class="hero">
         <h1>
-            We break news that matter on this blog
+            We break news that matter on this page
         </h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam vero tempora animi rerum excepturi eius dolores? Dolor excepturi praesentium quod architecto delectus quos incidunt doloribus?</p>
         <button>Explore Now</button>
