made changes to logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <p>NEWSPOINT</p>
+            <p>NEWS-POINT</p>
         </div>
         <nav>
             <ul>
