Finished up footer, ads and CTA

--- a/index.html
+++ b/index.html
@@ -62,5 +62,48 @@
         
         </article>
     </section>
+    <section class="cta">
+        <h2>Be the first to get breaking news around you</h2>
+        <input type="email" placeholder="Enter your email"/>
+        <button>Join our Newsletter</button>
+    </section>
+    <section class="ads">
+        <div>
+            <h3>Post Title</h3>
+            <p>Lorem this oosy is great</p>
+            <span>Read more</span>
+        </div>
+        <div>
+            <h3>Post Title</h3>
+            <p>Lorem this oosy is great</p>
+            <span>Read more</span>
+        </div>
+    </section>
+    <footer class="foota">
+        <section class="footer_top_area">
+        <div class="footer_logo_col">
+            <p class="logo">NEWS-POINT</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione velit nulla nesciunt a inventore provident.</p>
+        </div>
+        <div class="footer_nav_col">
+            <h5>Useful Links</h5>
+            <ul>
+                <li>Home</li>
+                <li>Politics</li>
+                <li>Foreign News</li>
+                <li>Sports</li>
+            </ul>
+        </div>
+        <div class="footer_contact_col">
+            <h5>Get in Touch</h5>
+            <p>22 Admiralty way<br/> Lekki- Lagos</p>
+            <p>Tel: 0819779667</p>
+            <p>Email: info@newspoint.io</p>
+        </div>
+    </section>
+    <div class="footer_bottom_area">
+        <p>All Rights Reserved Copyright &copy; 2022</p>
+    </div>
+    </footer>
     </body>
 </html>
